git-svn-id: http://sqlworkbench.mgm-tp.com/sqlworkbench/trunk/sqlworkbench@8043 6c36a7f0-0884-4472-89c7-80b7fa7b7f28